CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT (Realtime)

############## CMAKE OPTIONS #####################

SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../bin)


############### SOURCE FILES ######################

SET(SOURCES main.cpp
)

add_executable( ${PROJECT_NAME} ${SOURCES} 
)

############### DEPENDENCIES ######################

# SimplECat
SET(SIMPLECAT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../..)
INCLUDE_DIRECTORIES(${SIMPLECAT_DIR}/src)
FIND_LIBRARY( SIMPLECAT_LIBRARY NAMES libsimplecat.so PATHS ${SIMPLECAT_DIR}/lib/ )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SIMPLECAT_LIBRARY} )

# Etherlab
SET(ETHERLAB_DIR /opt/etherlab)
INCLUDE_DIRECTORIES(${ETHERLAB_DIR}/include)
FIND_LIBRARY( ETHERCAT_LIBRARY NAMES libethercat.so PATHS ${ETHERLAB_DIR}/lib/ )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${ETHERCAT_LIBRARY} )

# Real time
TARGET_LINK_LIBRARIES(${PROJECT_NAME} rt)

